<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/menu_home" android:icon="@android:drawable/ic_menu_view" />
        <item android:id="@+id/nav_find" android:title="@string/menu_find" android:icon="@android:drawable/ic_menu_search" />
        <item android:id="@+id/nav_wishlist" android:title="@string/menu_wishlist" android:icon="@android:drawable/ic_menu_save" />
        <item android:id="@+id/nav_learn" android:title="@string/menu_learn" android:icon="@android:drawable/ic_media_play" />
        <item android:id="@+id/nav_profile" android:title="@string/menu_profile" android:icon="@android:drawable/ic_menu_myplaces" />
        <item android:id="@+id/nav_settings" android:title="@string/menu_settings" android:icon="@android:drawable/ic_menu_preferences" />
    </group>

    <item android:id="@+id/nav_logout" android:title="@string/menu_logout" android:icon="@android:drawable/ic_lock_power_off" />
</menu>
